--- a/debian/control
+++ b/debian/control
@@ -5,12 +5,11 @@ Maintainer: CutefishOS <support@cutefishos.com>
 Build-Depends: cmake,
                debhelper (>= 9),
                extra-cmake-modules,
-               qtbase5-dev,
-               qtdeclarative5-dev,
-               qtquickcontrols2-5-dev,
-               qttools5-dev,
-               qttools5-dev-tools,
-               libqt5x11extras5-dev,
+               qt6-base-dev,
+               qt6-declarative-dev,
+               qt6-quickcontrols2-dev,
+               qt6-tools-dev,
+               qt6-tools-dev-tools,
                libpam0g-dev,
                libx11-dev
 Standards-Version: 4.5.0
