--- a/screenlocker/CMakeLists.txt
+++ b/screenlocker/CMakeLists.txt
@@ -2,6 +2,21 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
+# 查找libcutefish mpris库
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(XCB_LIBS REQUIRED xcb)
+
+# 设置libcutefish库路径
+set(LIBCUTEFISH_LIBRARIES cutefishmpris_qmlplugins)
+
+# 添加libcutefish库的搜索路径
+set(LIBCUTEFISH_LIB_DIRS 
+    ${CMAKE_SOURCE_DIR}/../../../libcutefish/obj-x86_64-linux-gnu/mpris
+)
+
+# 添加库搜索路径
+link_directories(${LIBCUTEFISH_LIB_DIRS})
+
 set(PROJECT_SOURCES
     main.cpp
     application.cpp
@@ -21,6 +36,7 @@ target_link_libraries(cutefish-screenlocker
     Qt6::DBus
     Qt6::Widgets
     Qt6::Quick
+    ${LIBCUTEFISH_LIBRARIES}
     ${X11_LIBRARIES}
 )
 
